--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "^1.15.11",
+    "@react-native-community/netinfo": "^7.1.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "aws-amplify": "^4.3.8",
+    "aws-amplify-react-native": "^6.0.1",
     "expo": "~43.0.2",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
