--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -25,7 +25,17 @@
     "SignalApp": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
-      "dependsOn": [],
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "SignalAppPostConfirmation",
+          "triggerProvider": "Cognito",
+          "attributes": [
+            "Arn",
+            "Name"
+          ]
+        }
+      ],
       "customAuth": false,
       "frontendAuthConfig": {
         "socialProviders": [],
@@ -52,6 +62,13 @@
           "EMAIL"
         ]
       }
+    }
+  },
+  "function": {
+    "SignalAppPostConfirmation": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   }
 }
