--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/netinfo": "^7.1.2",
+    "@react-native-community/toolbar-android": "^0.2.1",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -26,6 +28,7 @@
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
     "expo-font": "~10.0.3",
+    "expo-image-picker": "~11.0.3",
     "expo-linking": "~2.4.2",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
@@ -34,9 +37,11 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-emoji-selector": "^0.2.0",
+    "react-native-get-random-values": "^1.7.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
