--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aws-amplify-react-native": "^6.0.1",
     "expo": "~43.0.2",
     "expo-asset": "~8.4.3",
+    "expo-av": "~10.1.3",
     "expo-constants": "~12.1.3",
     "expo-font": "~10.0.3",
     "expo-image-picker": "~11.0.3",
@@ -33,6 +34,7 @@
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
