--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.12.0",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/netinfo": "^7.1.2",
@@ -22,6 +23,8 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@stablelib/base64": "^1.0.1",
+    "@stablelib/utf8": "^1.0.1",
     "aws-amplify": "^4.3.8",
     "aws-amplify-react-native": "^6.0.1",
     "expo": "~43.0.2",
@@ -31,6 +34,7 @@
     "expo-font": "~10.0.3",
     "expo-image-picker": "~11.0.3",
     "expo-linking": "~2.4.2",
+    "expo-random": "~12.0.1",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
@@ -43,6 +47,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
+    "tweetnacl": "^1.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
